# android-key-attestation

./: .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  maven_install.json
.github/workflows/: bazel.yml  gradle.yml
server/: README.md  build.gradle  gradlew.bat
server/examples/: BUILD
server/examples/pem/key_RSA_StrongBox_on/: cert0.pem
server/src/main/java/com/android/example/: ASN1Parsing.java  AuthorizationList.java  AuthorizationListBuilder.java  BUILD  Constants.java  KeyAttestationExample.java  ParsedAttestationRecord.java  RootOfTrust.java
server/src/main/java/com/google/android/attestation/: ASN1Parsing.java  AttestationApplicationId.java  AuthorizationList.java  BUILD  CertificateRevocationStatus.java  Constants.java  ParsedAttestationRecord.java  RootOfTrust.java
server/src/main/java/com/google/android/attestation/validator/: CertValidationException.java  CertValidator.java  CertValidatorRule.java
server/src/main/java/com/google/android/attestation/validator/rule/: ExpirationRule.java
server/src/main/proto/: android_attestation.proto
server/src/test/java/com/android/example/: AuthorizationListTest.java  ParsedAttestationRecordTest.java  RootOfTrustTest.java
server/src/test/java/com/google/android/attestation/: AttestationApplicationIdTest.java  AuthorizationListTest.java  BUILD  CertificateRevocationStatusTest.java  ParsedAttestationRecordTest.java  RootOfTrustTest.java
server/src/test/java/com/google/android/attestation/validator/rule/: ExpirationRuleTest.java
server/src/test/resources/: cert_chain_with_attest_keys.pem  fake_cert_chain_with_attest_keys.pem  normal_cert_chain.pem
src/main/java/com/android/example/: BUILD  KeyAttestationExample.java
src/main/java/com/google/android/attestation/: ASN1Parsing.java  ASN1Parsing.kt  AttestationApplicationId.java  AttestationApplicationId.kt  AuthorizationList.java  AuthorizationList.kt  BUILD  CertificateRevocationStatus.java  Constants.java  Constants.kt  ParsedAttestationRecord.java  ParsedAttestationRecord.kt  RootOfTrust.java  RootOfTrust.kt
src/test/java/com/google/android/attestation/: AttestationApplicationIdTest.java  AttestationApplicationIdTest.kt  AuthorizationListTest.java  AuthorizationListTest.kt  BUILD  CertificateRevocationStatusTest.java  ParsedAttestationRecordTest.java  ParsedAttestationRecordTest.kt  RootOfTrustTest.java  RootOfTrustTest.kt
src/test/resources/: status.json
