bazel_dep(name = "rules_jvm_external", version = "6.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # main
        "com.google.errorprone:error_prone_annotations:2.29.0",
        "org.bouncycastle:bcpkix-jdk18on:1.78.1",
        "org.bouncycastle:bcprov-jdk18on:1.78.1",

        # test
        "com.google.truth:truth:1.4.4",
        "junit:junit:4.13.2",
        "org.jetbrains.kotlin:kotlin-test:2.0.0",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

bazel_dep(name = "rules_kotlin", version = "1.9.5")
